Archive2/19/bf66890dd5a642/output
main.cpp: In function ‘main’:
main.cpp:5:5: error: expected identifier or ‘(’ before ‘[’ token
 char[] string = "This is CprE288";
     ^
main.cpp:6:5: error: expected identifier or ‘(’ before ‘[’ token
 char[] sub = strstr(string, ‘C’);
     ^
main.cpp:6:5: error: stray ‘\342’ in program
main.cpp:6:5: error: stray ‘\200’ in program
main.cpp:6:5: error: stray ‘\230’ in program
main.cpp:6:5: error: stray ‘\342’ in program
main.cpp:6:5: error: stray ‘\200’ in program
main.cpp:6:5: error: stray ‘\231’ in program
main.cpp:7:5: error: ‘sub’ undeclared (first use in this function)
 if (sub){
     ^
main.cpp:7:5: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:8:1: error: stray ‘\342’ in program
 printf(“%s” "yes");
 ^
main.cpp:8:1: error: stray ‘\200’ in program
main.cpp:8:1: error: stray ‘\234’ in program
main.cpp:8:11: error: expected expression before ‘%’ token
 printf(“%s” "yes");
           ^
main.cpp:8:11: error: stray ‘\342’ in program
main.cpp:8:11: error: stray ‘\200’ in program
main.cpp:8:11: error: stray ‘\235’ in program
