Archive2/19/bf66890dd5a642/main.cpp
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
int main(void){
char[] string = "This is CprE288";
char[] sub = strstr(string, ‘C’);
if (sub){
printf(“%s” "yes");
}
}